--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,19 @@
-<ol class = "post-list">
-    {{#each posts as |post|}} {{!--loops through posts --}} 
-    <li>
-       {{> post-info post }}
-       
-    </li>
-    {{/each}}  {{!-- stop loops  --}}
+
+<ol class="post-list">
+  {{#each posts}}
+  <li>
+    <article class="post">
+      <div class="title">
+        <a href="{{post_url}}" target="_blank">{{title}}</a>
+        <span>({{post_url}})</span>
+      </div>
+      <div class="meta">
+        {{vote_count}} point(s) by {{user.username}} on
+        {{created_at}}
+        |
+        <a href="/post/{{id}}">{{comments.length}} comment(s)</a>
+      </div>
+    </article>
+  </li>
+  {{/each}}
 </ol>
