--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Just Tech News</title>
+  <title>NerdNews</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
@@ -12,29 +12,39 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1>
-        <a href="/">Just Tech News</a>
-      </h1>
-      <nav>
-        {{#if loggedIn}}
-        <a href="/dashboard">dashboard</a>
-        <button id= "logout"  class="btn-no-style">logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}}
+       <nav class="navbar">
+         <ul>
+           <li>
+               <a href="/home">Home</a>
+            </li>
+            <li>
+               <a href="/dashboard">Dashboard</a>
+            </li>
+            <li>    
+                <a href="/login">Login</a>
+            </li>
+            <li>        
+                <button id= "logout"  class="btn-no-style">Logout</button>
+            </li>
+        </ul>
       </nav>
+      <div id="title-div">
+          <h1>
+            <a href="/" class="main-title">NerdNews</a>
+          </h1>
+      </div>
      
     </header>
     <main>
       {{{ body }}}
     </main>
-    <footer>
+    <footer id="footer">
       Thanks for visiting!
     </footer>
   </div>
-  {{#if loggedIn}}
+  {{!-- {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
-  {{/if}}
+  {{/if}} --}}
 
 </body>
 
