--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,13 +1,20 @@
 <form class="login-form">
+    <h1>Login</h1>
+    <br>
   <div>
-    <label for="email-login">email:</label>
+    <label for="username-login">Username</label>
     <input type="text" id="email-login" />
   </div>
   <div>
-    <label for="password-login">password:</label>
+    <label for="password-login">Password:</label>
     <input type="password" id="password-login" />
   </div>
   <div>
-    <button type="submit">login</button>
+    <button type="submit">Login</button>
+  </div>
+  <div class="login-signup">
+         <a href="/signup">Sign up instead</a>
   </div>
 </form>
+
+<script src="./javascript/login.js"></script>
