login, signup, logout all working

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
     <br>
   <div>
     <label for="username-login">Username</label>
-    <input type="text" id="email-login" />
+    <input type="text" id="username-login" />
   </div>
   <div>
     <label for="password-login">Password:</label>
