--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,17 +2,17 @@
     <h1>Signup</h1>
     <br>
   <div>
-    <label for="username-login">Username</label>
+    <label for="username-signup">Username</label>
     <input type="text" id="username-signup" />
   </div>
   <div>
-    <label for="password-login">Password:</label>
+    <label for="password-signup">Password:</label>
     <input type="password" id="password-signup" />
   </div>
   <div>
     <button type="submit">Sign up</button>
   </div>
-  <div class="login-signup">
+  <div class="signup-login">
          <a href="/login">Login instead</a>
   </div>
 </form>
