--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -46,9 +46,9 @@
       Thanks for visiting!
     </footer>
   </div>
-  {{!-- {{#if loggedIn}} --}}
+   {{#if loggedIn}} 
   <script src="./javascript/logout.js"></script>
-  {{!-- {{/if}}  --}}
+   {{/if}}
 
 </body>
 
