--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,13 +1,5 @@
-<article class="post">
-    <div class="title">
-        <a href="{{post.post_url}}" target="_blank">{{post.title}}</a>  
-        <span>({{post.post_url}})</span>       
-    </div>
-    <div class="meta">
-        By: {{post.user.username}} on {{post.created_at}}.
-        |
-        <a href="/post/{{post.id}}">{{post.comments.length}} comment(s)</a>
-    </div>
+{{>post-info post}}
+
     {{#if loggedIn}}
     <form class = "comment-form">
         <div>
@@ -21,19 +13,8 @@
     </form>
     {{/if}}
 
-    <div class="comments">
-        {{#each post.comments}} 
-        <section class="comment">
-            <div class="meta">
-                {{user.username}} on {{created_at}}
-            </div>
-            <div class="text">
-                {{comment_text}}
-            </div>
-        </section>
-        {{/each}}
-    </div>
-</article>
+    {{>comments post.comments}}
+
 
 {{#if loggedIn}}
     <script src="/javascript/comment.js"></script>
