--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -87,6 +87,26 @@ header nav {
   .comments>.comment:nth-child(odd) {
     background-color: var(--color5);
   }
+
+.new-post-form>div {
+  display:flex;
+  flex-direction:column;
+
+}
+
+  .new-post-form>div>textarea {
+    min-width: 60%;
+    min-height: 150px;
+
+  }
+
+  #btn-new-post {
+    background-color: var(--color4);
+    height: 5rem;
+    width: 18rem;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
 /* a:link {
     color:var(--color5);
     background-color: var(--color3);
@@ -115,8 +135,9 @@ a:hover {
 */
 .main-title {
     font-size:3rem;
-    padding-left: 3rem;
-    padding-bottom: 3rem;
+    padding-left: 1rem;
+    padding-bottom: 1rem;
+    color: var(--color6);
 }
 #title-div {
     background-color: var(--color3);
@@ -145,6 +166,13 @@ footer {
     display: flex;
     justify-content: center;
     font-size: 1rem;
+}
+/*   edit post stuff */
+#content-body {
+  width: 50vw;
+  height: 30vh;
+  resize: none;
+
 }
 
 
