--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -8,6 +8,6 @@
         {{!-- By {{user.username}} on {{format_date created_at}}
         |
         <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a> --}}
-         <span>  {{post_content}}   </span>
+         <span id="post-content-span">  {{post_content}}   </span>
       </div>
     </article>
