--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,10 @@
  {{>nerdnews-title}}
  
 <form class="login-form">
-    <h1>Login</h1>
+    <h1 id="login-title">Login:</h1>
     <br>
   <div>
-    <label for="username-login">Username</label>
+    <label for="username-login">Username:</label>
     <input type="text" id="username-login" />
   </div>
   <div>
@@ -15,7 +15,7 @@
     <button type="submit">Login</button>
   </div>
   <div class="login-signup">
-         <a href="/signup">Sign up instead</a>
+         <a href="/signup">Sign-up instead</a>
   </div>
 </form>
 
