--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,10 +1,10 @@
  {{>nerdnews-title}}
  
 <form class="signup-form">
-    <h1>Signup</h1>
+    <h1 id="signup-title">Signup:</h1>
     <br>
   <div>
-    <label for="username-signup">Username</label>
+    <label for="username-signup">Username:</label>
     <input type="text" id="username-signup" />
   </div>
   <div>
@@ -12,7 +12,7 @@
     <input type="password" id="password-signup" />
   </div>
   <div>
-    <button type="submit">Sign up</button>
+    <button type="submit">Sign-up</button>
   </div>
   <div class="signup-login">
          <a href="/login">Login instead</a>
