--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -25,8 +25,8 @@
   </div>
 
   <div>
-     <button type="submit" class="update-post-btn">Update</button>
-     <button type="button" class="delete-post-btn">Delete</button>
+     <button id="my-btn"  type="submit" class="update-post-btn">Update</button>
+     <button id="my-btn" type="button" class="delete-post-btn">Delete</button>
   </div>
 </form>
 
