--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -13,10 +13,14 @@
       {{!-- <input id="post-content" name="post-comment" /> --}}
       <textarea id="post-content" name="post-content"></textarea>
     </div>
-    <button type="submit" class="btn">Create</button>
+    <div id="btn-create-post-holder">
+       <button id="btn-create-post" type="submit" class="btn">Create Post</button>
+    </div>
+   
   </form>
 </section>
 
 
 
 <script src="/javascript/create-post.js"></script>
+
