--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -7,7 +7,7 @@
         </div>
 
         <div>
-            <button type="submit">Add a comment</button>    
+            <button id="btn-comment" type="submit">Add a comment</button>    
           
         </div>
     </form>
