--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,6 +40,7 @@
       {{{ body }}}
     </main>
     <footer id="footer">
+      Made by: Tony Gendreau  &copy 
       Thanks for visiting!
     </footer>
   </div>
