--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -6,7 +6,7 @@
             <textarea name="comment-body"></textarea>
         </div>
 
-        <div>
+        <div id="add-comment-btn-holder">
             <button id="btn-comment" type="submit">Add a comment</button>    
           
         </div>
