--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -6,35 +6,26 @@
   <form class="edit-post-form">
     <div>
       <input name="post-title" type="text" value="{{post.title}}" />
-     
-    </div>
-    <div>
-       By you on {{format_date post.created_at}}
-      |
-      <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
+      <textarea name="content-body" id="content-body"> {{post.post_content}}</textarea>
     </div>
   
-   
   </form>
 </article>
 
-
-<form class="content-form">
-  <div>
-    <textarea name="content-body" id="content-body"> {{post.post_content}}</textarea>
-  </div>
-
-  <div>
+  
+  <div id="edit-post-btn-holder">
      <button id="my-btn"  type="submit" class="update-post-btn">Update</button>
      <button id="my-btn" type="button" class="delete-post-btn">Delete</button>
   </div>
-</form>
 
+
+<h3> Comments on this Post:</h3>
+</br>
 {{> comments post.comments}} 
 
 
 
 <script src="/javascript/edit-post.js"></script>
 <script src="/javascript/delete-post.js"></script>
-{{!-- <script src="/javascript/comment.js"></script> --}}
+
 
