a couple more css fixes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,6 +19,7 @@ main {
    
     font-family: Helvetica, Arial, Helvetica, sans-serif;
     min-height: 80vh;
+    padding:1rem;
     
 }
   /*-----------------------------------------------------------*/
@@ -60,8 +61,9 @@ header nav {
     border-radius: 15px;
     /* text-shadow: none; */
   }
-  textarea {
-    border: 2px black solid;
+  
+  section {
+    padding: 1rem;
   }
   #logout {
     color: var(--color77);
