--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,6 +1,6 @@
 <article class="post">
       <div class="title">
-        <a href="/post/{{id}}" target="_blank">{{title}}</a>
+        <a href="/post/{{id}}" target="">{{title}}</a>
         <span> By {{user.username}} on {{format_date created_at}}</span>
       </div>
       <div class="meta">
